[package]
name = "malloc-protocol-wcall-template"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.5.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
spl-token = {version = "3.1", features = ["no-entrypoint"]}
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.5.6"
solana-sdk = "1.5.6"
tokio = { version = "0.3", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
